fix: bad antd z-index

--- a/src/styles/antd-overrides/drawer.scss
+++ b/src/styles/antd-overrides/drawer.scss
@@ -12,5 +12,5 @@
 }
 
 .ant-drawer {
-  z-index: 20;
+  z-index: 20 !important;
 }
