--- a/src/styles/antd-overrides/modal.scss
+++ b/src/styles/antd-overrides/modal.scss
@@ -29,7 +29,7 @@
 
 .ant-modal-wrap,
 .ant-modal-mask {
-  z-index: 20;
+  z-index: 20 !important;
 }
 
 .ant-modal-footer {
